--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
                                 aria-expanded="false">
                                 About</a>
                             <ul class="dropdown-menu">
-                                <li class="dropdown-item">test </li>
-                                <li class="dropdown-item">test</li>
+                                <li class="dropdown-item">Contacts </li>
+                                <li class="dropdown-item">Help</li>
                             </ul>
                         </li>
                         <li class="nav-item ">
