--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
     <body>
     <nav class="navbar navbar-expand-lg bg-body-tertiary position-fixed top-0 start-0 w-100 ">
         <div class="container-fluid" id="nav-div">
-            <div class="contaner-fluid "><img src="/images/logo.jpeg" class="img-fluid logo-1 rounded d-none d-lg-block " alt="logo" id=""></div>
+            <div class="contaner-fluid "><img src="images/logo.jpeg" class="img-fluid logo-1 rounded d-none d-lg-block " alt="logo" id=""></div>
             </div>
             <div id="display-nav-flex" class="container-fluid d-flex">
-                <a class="navbar-brand" href="#"><img src="/images/newLogo.jpeg" class="img-fluid logo rounded d-block d-md-none"  alt="logo"></a>
+                <a class="navbar-brand" href="#"><img src="images/newLogo.jpeg" class="img-fluid logo rounded d-block d-md-none"  alt="logo"></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
                     aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
